fix swagger documentation for jsonapi & dredd
